fix:index gap

--- a/src/assets/css/v3/app.less
+++ b/src/assets/css/v3/app.less
@@ -33,7 +33,7 @@ body {
     position: relative;
     overflow-x: hidden;
     .flex;
-    gap: 10px;
+    gap: 20px;
     .m-primary__main-left {
         flex: 1;
         width: calc(100% - 330px); // 这里注释了我那边是有问题的，包括中间部分tab宽度，以及右侧不显示
